cleanup dvbsubtitles